My_Python_Notebook：文件搜索路径

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -224,7 +224,7 @@ pip install Pillow
 
 ```python
 >>> from PIL import Image
->>> im = Image.open('test.png') # 打开一张照片
+>>> im = Image.open('C:/Users/Administrator/Desktop/test.png') # 打开指定路径下的一张照片
 >>> print(im.format, im.size, im.mode) # 打印照片的文件格式&尺寸&颜色模式
 PNG (400, 300) RGB
 >>> im.thumbnail((200, 100)) # 创建缩略图
@@ -274,9 +274,47 @@ Type "help", "copyright", "credits" or "license" for more information.
 
 ```python
 >>> import sys
->>> sys.path.append('C:\\Users\\Administrator\\Desktop')
+>>> sys.path.append('C:/Users/Administrator/Desktop')
 ```
 
 - 方法二：**配置环境变量PYTHONPATH**，只需要增加自己的搜索路径，默认的路径是不会被覆盖掉的，使用这种方法就**不需要每次都修改 `sys.path` **了。
 
 关于 `sys.path` 的详情可以查看[官方文档](https://docs.python.org/3/library/sys.html#sys.path)。
+
+---
+
+<br>
+
+## 文件搜索路径
+
+这一节与模块无关，但是觉得有必要区分好**文件搜索路径**和**模块搜索路径**！ 文件搜索路径是当前工作目录，如果我们不指定路径，直接使用文件名访问文件的时候，Python会从当前路径中进行查找；模块搜索路径则是像上一节提及的那样，指 `sys.path` 列表中包含的路径。
+
+要获取当前工作路径可以使用os模块的 `getcwd` 函数，也即**get current work directory**：
+
+```python
+>>> import os
+>>> os.getcwd()
+'C:\\Users\\Administrator\\Desktop'
+```
+
+要调用的文件如果放在当前工作路径上就可以直接用 `文件名.文件格式` 指定，比方说我在桌面放了一张 `test.jpg`，那么访问时直接用 `im = Image.open('test.jpg')` 就可以打开了，无须使用完整的路径，也即 `im = Image.open('C:/Users/Administrator/Desktop/test.jpg')`。
+
+注意Python中**路径字符串里斜杠的使用**， 如果**使用反斜杠划分就必须转义**，也即写作双反斜杠 `\\`；如果**使用左斜杠 `/` 则不需要进行转义**。Python默认路径字符串都使用双反斜杠。
+
+如果文件不在当前工作路径，那么我们写路径时可以有两种写法：
+
+- 使用**绝对路径**
+
+```python
+im = Image.open('C:/Users/Administrator/Desktop/test.jpg')
+```
+
+这里使用了左斜杠，所以不需要转义。
+
+- 使用**相对路径**
+
+```python
+im = Image.open('./test.jpg')
+```
+
+相对路径即相对当前工作路径而言的路径，这是为了避免路径过长而设计的，可以**用 `.` 符来代替当前工作路径**。
