My_Python_Notebook：模块（添加目录）

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -6,6 +6,22 @@
 
 在Python中，**一个.py文件就称之为一个模块（Module）**。
 
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [使用模块的几个好处](#使用模块的几个好处)
+- [模块名和包名](#模块名和包名)
+- [使用模块](#使用模块)
+    - [例子解析](#例子解析)
+    - [命名规范和作用域](#命名规范和作用域)
+- [安装第三方库](#安装第三方库)
+- [模块搜索路径](#模块搜索路径)
+- [文件搜索路径](#文件搜索路径)
+
+<!-- /MarkdownTOC -->
+
+
 ## 使用模块的几个好处
 
 - 大大提高了代码的可维护性。
@@ -48,7 +64,7 @@
 
 Python本身就内置了很多模块可以直接import使用。 下面我们自己编写一个Hello模块作为例子：
 
-```
+```python
 #!/usr/bin/env python3
 # -*- coding: utf-8 -*-
 
