--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -2,7 +2,7 @@
 
 ## 基本概念
 
-面向对象编程 —— Object Oriented Programming，简称OOP，是一种程序设计思想。OOP把对象作为程序的基本单元，**一个对象不仅包含数据还包含操作数据的函数**。
+面向对象编程 —— Object Oriented Programming，简称OOP，是一种编程思想。OOP把对象作为程序的基本单元，**一个对象不仅包含数据还包含操作数据的函数**。
 
 ---
 
