My_Python_Notebook：对比面向过程和面向对象

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -4,8 +4,52 @@
 
 面向对象编程 —— Object Oriented Programming，简称OOP，是一种编程思想。OOP把对象作为程序的基本单元，**一个对象不仅包含数据还包含操作数据的函数**。
 
+### 对比面向过程与面向对象
+
+- **面向过程编程（Procedural programming）**：把计算机程序视为**一系列子程序的集合**。为了简化程序设计，面向过程把子程序继续切分为更小的子程序，也即把大的功能分为若干小的功能进行实现，从而降低系统的复杂度，这种做法也称为**模块化（Modularity）**。
+
+- **面向对象编程（Object-oriented programming）**：把计算机程序视为**一组对象的集合**，而每个对象都可以接收其他对象发过来的消息，并处理这些消息，计算机程序的执行就是一系列消息在各个对象之间传递。
+
+下面以保存和打印学生成绩表为例，分别展示面向过程编程和面向对象编程的不同：
+
+**面向过程编程**：
+
+```python
+def save_score(name, score):
+    return {'name':name, 'score':score}
+
+def print_score(std):
+    print('%s: %s' % (std['name'], std['score']))
+
+bart = save_score('Michael', 98)
+lisa = save_score('Bob', 81)
+
+print_score(bart)
+print_score(lisa)
+```
+
+面向过程编程其实就是细分功能并逐步实现，这里分出了保存成绩和打印成绩两个细的功能，并分别封装成子程序（或者说函数），然后通过调用各个子程序来实现程序的最终目标（保存并打印成绩）。
+
+**面向对象编程**：
+
+```python
+class Student(object):
+    def __init__(self, name, score):
+        self.name = name
+        self.score = score
+    def print_score(self):
+        print('%s: %s' % (self.name, self.score))
+
+bart = Student('Bart Simpson', 59)
+lisa = Student('Lisa Simpson', 87)
+bart.print_score()
+lisa.print_score()
+```
+
+面向对象编程强调程序的主体是对象，这里我们把学生抽象成一个**类（class）**，这个类的对象拥有 `name` 和 `score` 这两个**属性（Property）**，那么保存成绩就是把学生类实例化为**对象（object）**，打印成绩就是给每个学生对象发送一个 `print_score` 的**消息（message）**，让对象自己打印自己的属性。这个发送消息的过程又称为调用对象的**方法（method）**，注意区分函数和方法。
+
 ---
 
-<br>
+
 
 
