My_Python_Notebook：五种编程范式的区分

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -50,6 +50,32 @@ lisa.print_score()
 
 ---
 
+### 五种编程范式的区分
 
+这一小节是额外加上的，因为之前第4章[函数式编程](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/04%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B.md)也讲了一种编程范式，这章又引入了面向过程编程和面向对象编程的概念，所以就在这里整理一下。也可以直接查看维基词条：[Wikipedia - Procedural programming](https://en.wikipedia.org/wiki/Procedural_programming#Comparison_with_imperative_programming) 以及引用的文章，讲得比较细致和清晰。更详细的可以查找专门讲编程范式的书籍来浏览。
+
+#### 面向过程编程（Procedural programming）
+
+面向过程就是拆分和逐步实现，前一小节已经说过了，这里不再累述。
+
+#### 命令式编程（Imperative programming）
+
+有时候面向过程编程又称为命令式编程，两者经常混用，但它们之间还是有一点差别的。面向过程编程依赖于**块**和**域**，比方说有 `while`，`for` 等保留字；而命令式编程则没有这样的特征，一般采用 `goto` 或者分支来实现。
+
+#### 面向对象编程（Object-oriented programming）
+
+面向对象也在上一小节简单介绍过了，它比面向过程编程抽象程度更高，面向过程将一个编程任务划分为若干变量、数据结构和子程序的组合，而面向对象则是划分为对象，对象的行为（方法）、使用对象的数据（成员/属性）的接口。面向过程编程使用子程序去操作数据，而面向对象则把这两者结合为对象，每一个对象的方法作用在自身上。
+
+#### 函数式编程（Functional programming）
+
+在模块化和代码复用上，函数式编程和面向过程编程是很像的。但函数式编程中不再强调指令（赋值语句）。面向过程编写出的程序是一组指令的集合，这些指令可能会隐式地修改了一些公用的状态，而函数式编程则规避了这一点，**每一个语句都是一个表达式，只依赖于自己而不依赖外部状态**，因为我们现在所用的计算机都是基于指令运作的，所以函数式编程的效率会稍低一些，但是函数式编程一个很大的好处就是，既然每个语句都是独立的，那么就**很容易实现并行化**了。
+
+#### 逻辑编程（Logic programming）
+
+逻辑编程是一种我们现在比较少接触的变成范式，它关注于表达问题是什么是不是怎样解决问题。感兴趣的话可以了解一下Prolog语言。
+
+---
+
+<br>
 
 
