My_Python_Notebook：类和实例-访问限制

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -164,3 +164,64 @@ class Student(object):
 对于外部，**类的方法实现细节不用了解**，只需要知道怎样调用，能返回什么就可以了。
 
 ---
+
+### 访问限制
+
+尽管前一节中我们把数据用方法进行了封装，但事实上，实例化对象后，我们依然可以直接通过属性名来访问一个实例的属性值，并且自由地修改属性值。要让实例的内部属性不被外部访问，只需要在属性的名称前加上两个下划线 `__` 就可以了，此时属性就转换成了**私有属性**。
+
+```python
+>>> class Student():
+...     def __init__(self, name, score):
+...         self.__name = name   # 绑定私有属性__name
+...         self.__score = score # 绑定私有属性__score
+...     def print_score(self):   # 通过方法访问私有属性
+...         print(self.__name, self.__score)
+...
+>>> bart = Student('Bart', 98) # 创建一个Student类的实例bart
+>>> bart.__name                # 由于访问限制的保护，对外部而言，实例bart是没有__name这个属性的
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'Student' object has no attribute '__name'
+>>> bart.__score                # 由于访问限制的保护，对外部而言，实例bart是没有__score这个属性的
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'Student' object has no attribute '__score'
+>>> bart.print_score()          # 但是通过print_score方法可以访问该实例的__name属性和__score属性
+Bart 98
+```
+
+这是怎么实现的呢？其实呀，不能访问的实质是Python解释器**对外给私有变量添加了前缀** `_类名`，比如把 `__name` 会被改成 `_Student__name` 。所以我们在外部（即不是通过类的方法）访问时，`__name` 属性是不存在的，但访问 `_Student__name` 属性就可以了：
+
+```python
+>>> bart._Student__name
+'Bart'
+```
+
+所以说，**即使有访问限制，外部依然可以访问和修改内部属性**，Python没有任何机制预防这一点，只有靠使用者自己注意了。
+
+还有一点必须明白。**使用访问限制跟绑定属性是不冲突的**，所以虽然对内而言存在 `__name` 属性，但对外而言这个属性不存在，我们依然可以给实例绑定一个 `__name` 属性：
+
+```python
+>>> bart.__name = 'Alice' # 外部绑定__name属性
+>>> bart.__name           # 现在外部可以访问__name属性了
+'Alice'
+>>> bart.print_score()    # 但对内部方法来说，__name属性依然是原来的
+Bart 98
+```
+
+Python同样**没有任何机制防止我们给实例绑定一个和私有属性同名的属性**，从外部是可以访问这样绑定的属性的，但对内部方法而言，这种**绑定的赋值不会覆盖私有属性原来的值**，所以极容易出错，只有靠使用者自己注意了。
+
+通过 `dir(bart)` 可以查看实例包含的所有变量（属性和方法）：
+
+```python
+>>> dir(bart)
+['_Student__name', '_Student__score', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__',
+'__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__le__', '__lt__', '__module__',
+'__name', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__',
+'__subclasshook__', '__weakref__', 'print_score']
+```
+
+在Python中，变量名类似 `__xxx__` 的，也就是**以双下划线开头，并且以双下划线结尾**的，是**特殊变量**，特殊变量允许直接访问，**注意私有变量不要这样取名**。有时会看到以**一个下划线开头**的变量名，比如 `_name`，这样的变量外部是可以访问的，不属于访问限制，但是按照约定，这样的变量我们应**视为私有变量，不应在外部直接访问**。
+
+---
+
