My_Python_Notebook：类和实例

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -86,4 +86,58 @@ lisa.print_score()
 
 <br>
 
+## 类和实例
 
+在Python中定义类是通过 `class` 关键字完成的，像前面例子一样：
+
+```python
+class Student(object):
+    pass
+```
+
+定义类的格式是 `class 类名(继承的类名)` 。 **类名一般用大写字母开头**，关于继承的知识会留在后续的章节里详述，**object类是所有类的父类**，在Python3中不写也行（既可以写作 `class Student:` 或 `class Student():`），会自动继承，详情可以看[python class inherits object](http://stackoverflow.com/questions/4015417/python-class-inherits-object)。
+
+定义类以后，即使没有定义构造函数和属性，我们也可以实例化对象：
+
+```python
+>>> bart = Student()
+>>> bart
+<__main__.Student object at 0x10a67a590>
+>>> Student
+<class '__main__.Student'>
+```
+
+可以看到变量bart指向的就是一个Student类的实例，**每个实例的地址是不一样的**。
+
+与静态语言不同，Python作为动态语言，我们可以自由地给一个实例变量绑定属性：
+
+```python
+>>> bart.name = 'Bart Simpson'
+>>> bart.name
+'Bart Simpson'
+```
+
+**绑定的属性在定义类时无须给出**，随时都可以给一个实例绑定新属性。 但是！**这样绑定的新属性仅仅绑定在这个实例上**，别的实例是没有的！ 也就是说，**同一个类的多个实例例拥有的属性可能不同**！
+
+对于我们认为**必须绑定的属性**，可以通过定义特殊的 `__init__` 方法进行初始化，在创建实例时就进行绑定：
+
+```python
+class Student(object):
+
+def __init__(self, name, score):
+    self.name = name
+    self.score = score
+```
+
+使用 `__init__` 方法要注意：
+
+1. 第一个参数永远是 `self`，**指向创建出的实例本身**。
+2. **有了 `__init__` 方法，创建实例时就不能传入空的参数，必须传入与 `__init__` 方法匹配的参数**，参数self不用传，Python解释器会自动传入。
+
+```python
+>>> bart = Student('Bart Simpson', 59)
+>>> bart.name
+'Bart Simpson'
+>>> bart.score
+59
+```
