My_Python_Notebook：类和实例-获取和修改限制访问的属性

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -225,3 +225,30 @@ Python同样**没有任何机制防止我们给实例绑定一个和私有属性
 
 ---
 
+### 获取和修改限制访问的属性
+
+对于限制访问的属性，外部代码还是需要进行访问和修改的，我们可以在类中定义对应的get方法和set方法：
+
+```python
+>>> class Student():
+...     def __init__(self, name, score):
+...         self.__name = name   # 绑定私有属性__name
+...         self.__score = score # 绑定私有属性__score
+...     def print_score(self):   # 通过方法访问私有属性
+...         print(self.__name, self.__score)
+...     def get_name(self):
+...         return self.__name
+...     def get_score(self):
+...         return self.__score
+...     def set_score(self, score):
+...     if 0 <= score <= 100:
+...         self.__score = score
+...     else:
+...         raise ValueError('bad score')
+```
+
+通过类的set方法修改属性值，而不直接在外部修改有一个明显的好处，我们**可以在类的方法中对参数做检查，避免传入无效的参数**。 比如这里可以限制修改成绩时成绩的范围必须是0~100，超出就报错。
+
+---
+
+<br>
