My_Python_Notebook：继承和多态-基本概念

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -252,3 +252,43 @@ Python同样**没有任何机制防止我们给实例绑定一个和私有属性
 ---
 
 <br>
+
+## 继承和多态
+
+### 基本概念
+
+在OOP程序设计中，当我们定义一个类的时候，可以从某个现有的类继承，新的类称为**子类（Subclass）**，被继承的类则称为**基类/父类/超类（Base class/Super class）**。比方说我们创建一个Animal类，该类有一个run方法：
+
+```python
+>>> class Animal(object):
+        def run(self):
+            print('Animal is running...')
+```
+
+定义一个Dog类继承Animal类，尽管我们没有为它编写任何方法，但它却可以**获得父类的全部功能**：
+
+```python
+>>> class Dog(Animal):
+       pass
+
+>>> dog=Dog()
+>>> dog.run()
+Animal is running...
+```
+
+我们也可以为子类增加新的方法：
+
+```python
+>>> class Dog(Animal):
+...    def run(self):
+...        print('Dog is running...')
+...    def eat(self):
+...        print('Eating meat...')
+...
+>>> dog.run()
+Dog is running
+>>> dog.eat()
+Eating meat
+```
+
+这里我们除了定义一个新的 `eat` 方法之外，还定义了一个和父类方法同名的 `run` 方法，它会覆盖父类的方法，当调用子类实例的 `run` 方法时调用的就会是子类定义的 `run` 方法而不是父类的 `run` 方法了，这个特点称作**多态**。总结一下，**如果子类也定义一个和父类相同的方法，则执行时总是调用子类的方法**。
