--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -292,3 +292,16 @@ Eating meat
 ```
 
 这里我们除了定义一个新的 `eat` 方法之外，还定义了一个和父类方法同名的 `run` 方法，它会覆盖父类的方法，当调用子类实例的 `run` 方法时调用的就会是子类定义的 `run` 方法而不是父类的 `run` 方法了，这个特点称作**多态**。总结一下，**如果子类也定义一个和父类相同的方法，则执行时总是调用子类的方法**。
+
+### 实例的数据类型
+
+我们**定义一个类，实际就是定义了一种数据类型**，和 `list`，`str` 等没有什么区别，要判断一个变量是否属于某种数据类型可以使用 `isinstance()` 方法：
+
+```python
+>>> isinstance(dog,Animal)
+True
+>>> isinstance(dog,Dog)
+True
+```
+
+实例化子类的对象**既属于子类数据类型也属于父类数据类型**！但是反过来就不可以，实例化父类的对象不属于子类数据类型。
