My_Python_Notebook：继承和多态-多态的好处

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -305,3 +305,30 @@ True
 ```
 
 实例化子类的对象**既属于子类数据类型也属于父类数据类型**！但是反过来就不可以，实例化父类的对象不属于子类数据类型。
+
+### 多态的好处
+
+比方说在外部编写一个函数，接收含有 `run` 方法的变量作参数：
+
+```python
+def run_twice(animal):
+    animal.run()
+    animal.run()
+```
+
+当传入Animal类的实例时就执行Animal类的 `run` 方法，当传入Dog类的实例时也能执行Dog类的 `run` 方法，非常方便：
+
+```python
+>>> run_twice(Animal())
+Animal is running...
+Animal is running...
+>>> run_twice(Dog())
+Dog is running...
+Dog is running...
+```
+
+有了多态的特性：
+
+1. 实现同样的功能时，不需要为每个子类都在外部重写一个函数
+2. 只要一个外部函数能**接收父类实例作参数，则任何子类实例都能直接使用这个外部函数**
+3. 传入的任意子类实例在调用方法时，调用的都是子类中定义的方法（如果子类没有定义的话就调用父类的）
