My_Python_Notebook：继承和多态-开闭原则

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -332,3 +332,9 @@ Dog is running...
 1. 实现同样的功能时，不需要为每个子类都在外部重写一个函数
 2. 只要一个外部函数能**接收父类实例作参数，则任何子类实例都能直接使用这个外部函数**
 3. 传入的任意子类实例在调用方法时，调用的都是子类中定义的方法（如果子类没有定义的话就调用父类的）
+
+### 开闭原则
+
+所谓开闭原则，指的是**对扩展开放**：允许新增 `Animal` 类的子类；**对修改封闭**：父类 `Animal` 可以调用的外部函数其子类也能直接调用，不需要对外部函数进行修改。
+
+多态真正的威力：**调用方只需要关注调用函数的对象，不需要关注所调用的函数内部的细节**。当我们新增一种Animal的子类时，只要确保子类的 `run()` 方法编写正确即可，无须修改要调用的函数。对任意一个对象，我们**只需要知道它属于父类类型，无需确切知道它的子类类型具体是什么**，就可以放心地调用外部函数，而函数内部调用的方法是属于Animal类、Dog类、还是Cat类，**由运行时该对象的确切类型决定**。
