My_Python_Notebook：继承和多态-静态语言 VS 动态语言

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -338,3 +338,19 @@ Dog is running...
 所谓开闭原则，指的是**对扩展开放**：允许新增 `Animal` 类的子类；**对修改封闭**：父类 `Animal` 可以调用的外部函数其子类也能直接调用，不需要对外部函数进行修改。
 
 多态真正的威力：**调用方只需要关注调用函数的对象，不需要关注所调用的函数内部的细节**。当我们新增一种Animal的子类时，只要确保子类的 `run()` 方法编写正确即可，无须修改要调用的函数。对任意一个对象，我们**只需要知道它属于父类类型，无需确切知道它的子类类型具体是什么**，就可以放心地调用外部函数，而函数内部调用的方法是属于Animal类、Dog类、还是Cat类，**由运行时该对象的确切类型决定**。
+
+### 静态语言 VS 动态语言
+
+对于静态语言(如：Java)，如果函数需要传入 `Animal` 类型，则传入的参数必须是 `Animal` 类型或者它的子类类型，否则无法调用 `run()` 方法。
+
+对于动态语言而言，则不一定要传入Animal类型。**只要保证传入的对象有 `run()` 方法就可以了**。 这个特性又称"**鸭子类型**"，即一个对象只需要 "看起来像鸭子，能像鸭子那样走" 就可以了。
+
+```python
+class Timer(object):
+    def run(self):
+        print('Start...')
+```
+
+比方说这里的Timer类既不属于Animal类型也不继承自Animal类，但它的实例依然可以传入 `run_twice()` 函数并且执行自己的 `run()` 方法。
+
+Python的 `file-like object` 就是一种鸭子类型。真正的文件对象有一个 `read()` 方法，能返回其内容。 但是只要一个类中定义有 `read()` 方法，它的实例就可以被视为 `file-like object`。许多函数接收的参数都是 `file-like object`，不一定要传入真正的文件对象，传入任何实现了 `read()` 方法的对象都可以。
