My_Python_Notebook：继承和多态-小结

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -293,6 +293,8 @@ Eating meat
 
 这里我们除了定义一个新的 `eat` 方法之外，还定义了一个和父类方法同名的 `run` 方法，它会覆盖父类的方法，当调用子类实例的 `run` 方法时调用的就会是子类定义的 `run` 方法而不是父类的 `run` 方法了，这个特点称作**多态**。总结一下，**如果子类也定义一个和父类相同的方法，则执行时总是调用子类的方法**。
 
+---
+
 ### 实例的数据类型
 
 我们**定义一个类，实际就是定义了一种数据类型**，和 `list`，`str` 等没有什么区别，要判断一个变量是否属于某种数据类型可以使用 `isinstance()` 方法：
@@ -305,6 +307,8 @@ True
 ```
 
 实例化子类的对象**既属于子类数据类型也属于父类数据类型**！但是反过来就不可以，实例化父类的对象不属于子类数据类型。
+
+---
 
 ### 多态的好处
 
@@ -333,11 +337,15 @@ Dog is running...
 2. 只要一个外部函数能**接收父类实例作参数，则任何子类实例都能直接使用这个外部函数**
 3. 传入的任意子类实例在调用方法时，调用的都是子类中定义的方法（如果子类没有定义的话就调用父类的）
 
+---
+
 ### 开闭原则
 
 所谓开闭原则，指的是**对扩展开放**：允许新增 `Animal` 类的子类；**对修改封闭**：父类 `Animal` 可以调用的外部函数其子类也能直接调用，不需要对外部函数进行修改。
 
 多态真正的威力：**调用方只需要关注调用函数的对象，不需要关注所调用的函数内部的细节**。当我们新增一种Animal的子类时，只要确保子类的 `run()` 方法编写正确即可，无须修改要调用的函数。对任意一个对象，我们**只需要知道它属于父类类型，无需确切知道它的子类类型具体是什么**，就可以放心地调用外部函数，而函数内部调用的方法是属于Animal类、Dog类、还是Cat类，**由运行时该对象的确切类型决定**。
+
+---
 
 ### 静态语言 VS 动态语言
 
@@ -354,3 +362,16 @@ class Timer(object):
 比方说这里的Timer类既不属于Animal类型也不继承自Animal类，但它的实例依然可以传入 `run_twice()` 函数并且执行自己的 `run()` 方法。
 
 Python的 `file-like object` 就是一种鸭子类型。真正的文件对象有一个 `read()` 方法，能返回其内容。 但是只要一个类中定义有 `read()` 方法，它的实例就可以被视为 `file-like object`。许多函数接收的参数都是 `file-like object`，不一定要传入真正的文件对象，传入任何实现了 `read()` 方法的对象都可以。
+
+---
+
+### 小结
+
+- 继承可以把父类的所有功能都赋予子类，这样编写子类就**不必从零做起**，子类只需要**新增自己特有的方法，把父类不合适的方法覆盖重写**就可以了。
+
+- 动态语言的**鸭子类型**特点决定了**继承不像静态语言那样是必须的**。
+
+---
+
+<br>
+
