My_Python_Notebook：获取对象信息-type函数

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -379,4 +379,59 @@ Python的 `file-like object` 就是一种鸭子类型。真正的文件对象有
 
 这一小节主要介绍给定一个对象，如何了解对象的类型以及有哪些方法。
 
+### type函数
+
+使用type函数获得各种变量的类型：
+
+```python
+>>> type('str')
+<class 'str'>
+>>> type(None)
+<type(None) 'NoneType'>
+>>> type(abs)
+<class 'builtin_function_or_method'>
+>>> animal = Animal()
+>>> type(animal)
+<class '__main__.Animal'>
+>>> dog =  Dog()
+>>> type(dog)
+<class '__main__.Dog'>
+```
+
+`type()` 函数返回值是参数所属的类型，而这个返回值本身则属于type类型：
+
+```python
+>>> type(type('123'))
+<class 'type'>
+```
+
+可以用来进行类型判断：
+
+```python
+>>> type('123')==str
+True
+>>> type('123') == type(123)
+False
+```
+
+导入内建的 `types` 模块还可以做更多更强大的类型判断：
+
+```python
+>>> import types
+>>> def fn():
+...     pass
+...
+>>> type(fn)==types.FunctionType         # 判断变量是否函数
+True
+>>> type(abs)==types.BuiltinFunctionType # 判断变量是否内建函数
+True
+>>> type(lambda x: x)==types.LambdaType  # 判断变量是否匿名函数
+True
+>>> type((x for x in range(10)))==types.GeneratorType # 判断变量是否生成器
+True
+```
+
+---
+
+
 
