My_Python_Notebook：获取对象信息-isinstance函数

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -433,5 +433,37 @@ True
 
 ---
 
+### isinstance函数
+
+判断类型除了使用 `type()` 函数之外，使用 `isinstance()` 函数也能达到一样的效果：
+
+```python
+>>> isinstance('a', str)
+True
+>>> isinstance(123, int)
+True
+>>> isinstance(b'a', bytes)
+True
+>>> isinstance([1, 2, 3], (list, tuple))
+True
+```
+
+并且 `isinstance()` 函数的参数二还可以是一个tuple，此时 `isinstance()` 函数将**判断参数一是否属于参数二tuple中所有类型中的其中一种，只要符合其中一种则返回 `True`**。
+
+对于类的继承关系来说，`type()` 函数不太合适，因为我们没办法知道一个子类是否属于继承自某个类，使用 `isinstance()` 函数就可以解决这个问题了。**子类的实例也是父类的实例**。
+
+```python
+>>> animal = Animal()
+>>> dog =  Dog()
+>>> isinstance(animal, Animal)
+True
+>>> isinstance(animal, Dog) # 父类实例不是子类实例
+False
+>>> isinstance(dog, Animal) # 子类实例同时也是父类的实例
+True
+>>> isinstance(dog, Dog)
+True
+```
+
 
 
