My_Python_Notebook：获取对象信息-hasattr函数、setattr函数、getattr函数

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -508,5 +508,120 @@ True
 
 ---
 
+### hasattr函数、setattr函数、getattr函数
 
+首先定义一个类，并创建一个该类的实例 `obj`：
+
+```python
+>>> class MyObject(object):
+...     def __init__(self):
+...         self.x = 9
+...     def power(self):
+...         return self.x * self.x
+...
+>>> obj = MyObject()
+```
+
+利用 `hasattr()` 函数、`setattr()` 函数、`getattr()` 函数可以分别实现**判断属性/方法是否存在**，**绑定/赋值属性/方法**，以及**获取属性值/方法**的功能：
+
+```python
+>>> hasattr(obj, 'x')     # 有属性x吗？
+True
+>>> obj.x                 # 直接访问属性x
+9
+>>> setattr(obj, 'x', 10) # 为属性x设置新的值
+>>> obj.x                 # 直接访问属性x
+10
+>>> hasattr(obj, 'y')     # 有属性y吗？
+False
+>>> setattr(obj, 'y', 19) # 绑定一个新属性y
+>>> hasattr(obj, 'y')     # 有属性y吗？
+True
+>>> obj.y                 # 直接访问属性y
+19
+>>> getattr(obj, 'y')     # 获取属性y
+19
+```
+
+如果试图获取不存在的属性，会抛出 `AttributeError` 的错误：
+
+```python
+>>> obj.z             # 直接访问属性z
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'MyObject' object has no attribute 'z'
+>>> getattr(obj, 'z') # 获取属性z
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'MyObject' object has no attribute 'z'
+```
+
+特别地，我们可以**为 `getattr()` 函数传入一个额外参数表示默认值**，这样**当属性不存在时就会返回默认值**，而不是抛出错误了，但要注意，**getattr()` 并不会把这个默认值绑定到对象**：
+
+```python
+>>> getattr(obj, 'z', 404) # 获取属性z，如果不存在，返回默认值404
+404
+>>> obj.z                  # 没有进行绑定，所以obj仍然没有属性z
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'MyObject' object has no attribute 'z'
+```
+
+`getattr()` 函数除了可以获取属性之外，也可以用来获取方法并且赋值到变量，然后再通过变量使用：
+
+```python
+>>> fn = getattr(obj, 'power') # 获取方法 power() 并赋值给变量fn
+>>> fn                         # fn指向obj.power
+<bound method MyObject.power of <__main__.MyObject object at 0x10077a6a0>>
+>>> fn()                       # 调用fn
+100
+>>> obj.power()                # 结果和调用obj.power是一样的
+100
+```
+
+看到这里也许有一些疑问，为什么我们明明可以通过 `obj.x = 10` 的方式设置属性值，还要用 `setattr(obj, 'x', 10)` 呢？ 为什么我们明明可以通过 `obj.y` 直接访问属性值，还要用 `getattr(obj, 'x')` 呢？显然后者的写法要繁琐得多。确实，前面举得例子中，我们都没有任何必要这样写，也不应该这样写。`setattr()` 函数和 `getattr()` 函数是为了一些更特别的情况而创造的，例如：
+
+```python
+>>> attrname = 'x'
+>>> getattr(obj, attrname)
+10
+>>> obj.attrname
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'MyObject' object has no attribute 'attrname'
+```
+
+当**属性名绑定在一个变量上**时，显然直接访问就没有办法使用了，但 `getattr()` 函数则不存在这方面的问题。并且前面也提到了 `getattr()` 函数允许我们**设置默认返回值**，这时直接访问无法做到的。又例如：
+
+```python
+>>> attr = {'x':9, 'y':19, 'z':29}
+>>> attr.items()
+dict_items([('y', 19), ('z', 29), ('x', 9)])
+>>> for k,v in attr.items():
+...     setattr(obj, k, v)
+...
+>>> for k in attr.keys():
+...     getattr(obj, k)
+...
+19
+29
+9
+```
+
+我们可以非常方便地把属性名和属性值存储在一个dict里面，然后利用循环进行赋值，而无需显式地写出 `obj.x = 9`，`obj.y = 19`，和 `obj.z = 29`，当我们需要批量赋值大量属性时，好处就体现出来了。同样地，我们也可以利用循环来读取需要的每个属性的值，而无需显式地逐个属性进行访问。
+
+当然，如果可以直接写 `sum = obj.x + obj.y` 就不要写： `sum = getattr(obj, 'x') + getattr(obj, 'y')`，属性少的时候完全没有必要给自己添麻烦，对编写和阅读代码都不友好。
+
+最后举个使用 `hasattr()` 函数的例子，比方说读取对象fp，我们可以首先判断fp是否有 `read()` 方法，有则进行读取，无则直接返回空值：
+
+```python
+def readSomething(fp):
+    if hasattr(fp, 'read'):
+        return readData(fp)
+    return None
+```
+
+---
+
+<br>
 
