My_Python_Notebook：实例属性和类属性

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -625,3 +625,48 @@ def readSomething(fp):
 
 <br>
 
+## 实例属性和类属性
+
+由于Python是动态语言，根据类创建的实例可以任意绑定属性。
+
+要给实例绑定属性除了通过实例变量之外，也可以通过self变量来完成绑定：
+
+```python
+class Student(object):
+    def __init__(self, name):
+        self.name = name # 通过self变量绑定属性
+
+s = Student('Bob')
+s.score = 90             # 通过实例变量绑定属性
+```
+
+但是，如果Student类本身需要绑定一个属性呢？可以直接在类中定义属性，这种属性是**类属性**，归Student类所有：
+
+```python
+class Student(object):
+    name = 'Student'
+```
+
+当我们定义了一个类属性后，这个**类属性虽然归类所有，但类的所有实例都可以访问到**：
+
+```python
+>>> class Student(object):
+...     name = 'Student'
+...
+>>> s = Student()       # 创建实例s
+>>> print(s.name)       # 打印name属性，因为实例并没有name属性，所以会继续查找class的name属性
+Student
+>>> print(Student.name) # 打印类的name属性
+Student
+>>> s.name = 'Michael'  # 给实例绑定name属性
+>>> print(s.name)       # 由于实例属性优先级比类属性高，因此，它会屏蔽掉类的name属性
+Michael
+>>> print(Student.name) # 但是类属性并未消失，用Student.name仍然可以访问
+Student
+>>> del s.name          # 删除实例的name属性
+>>> print(s.name)       # 再次调用s.name，由于实例的name属性没有找到，类的name属性就显示出来了
+Student
+```
+
+从上面的例子可以看出，在编写程序的时候，千万不要给实例属性和类属性设置相同的名字，因为**相同名称的实例属性将屏蔽掉类属性**。但是删除实例属性后，再使用相同的名称进行访问，返回的就会变回类属性了。
+
