面向对象高级编程

--- a/My_Python_Notebook/06面向对象编程.md
+++ b/My_Python_Notebook/06面向对象编程.md
@@ -1,5 +1,34 @@
 # 面向对象编程
 
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [基本概念](#基本概念)
+    - [对比面向过程与面向对象](#对比面向过程与面向对象)
+    - [五种编程范式的区分](#五种编程范式的区分)
+    - [面向对象编程的三大特点](#面向对象编程的三大特点)
+- [类和实例](#类和实例)
+    - [数据封装](#数据封装)
+    - [访问限制](#访问限制)
+    - [获取和修改限制访问的属性](#获取和修改限制访问的属性)
+- [继承和多态](#继承和多态)
+    - [基本概念](#基本概念-1)
+    - [实例的数据类型](#实例的数据类型)
+    - [多态的好处](#多态的好处)
+    - [开闭原则](#开闭原则)
+    - [静态语言 VS 动态语言](#静态语言-vs-动态语言)
+    - [小结](#小结)
+- [获取对象信息](#获取对象信息)
+    - [type函数](#type函数)
+    - [isinstance函数](#isinstance函数)
+    - [dir函数](#dir函数)
+    - [hasattr函数、setattr函数、getattr函数](#hasattr函数、setattr函数、getattr函数)
+- [实例属性和类属性](#实例属性和类属性)
+
+<!-- /MarkdownTOC -->
+
+
 ## 基本概念
 
 面向对象编程 —— Object Oriented Programming，简称OOP，是一种编程思想。OOP把对象作为程序的基本单元，**一个对象不仅包含数据还包含操作数据的函数**。
