My_Python_Notebook：使用—用__slots__-动态绑定属性

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -2,3 +2,26 @@
 
 前面一章介绍了OOP最基础的数据封装、继承和多态3个概念，还有一些类和实例的操作。而在Python中，OOP还有很多更高级的特性，这一章会讨论多重继承、定制类、元类等概念。
 
+## 使用 \_\_slots\_\_
+
+### 动态绑定属性
+
+正常情况下，当我们定义了一个类，创建了一个类的实例后，我们可以给这个实例绑定任何属性和方法，这就是动态语言的灵活性。先定义类：
+
+```python
+class Student(object):
+    pass
+```
+
+然后，创建实例并给这个实例绑定一个属性：
+
+```python
+>>> s = Student()
+>>> s.name = 'Michael' # 动态给实例绑定一个属性
+>>> print(s.name)
+Michael
+```
+
+---
+
+
