My_Python_Notebook：使用—用__slots__-动态绑定方法

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -24,4 +24,72 @@ Michael
 
 ---
 
+### 动态绑定方法
+
+还可以尝试给实例绑定一个方法：
+
+```python
+>>> def set_age(self, age): # 定义一个函数
+...     self.age = age
+...
+>>> from types import MethodType
+>>> s.set_age = MethodType(set_age, s) # 把函数绑定到实例上，变为实例的方法
+>>> s.set_age(25) # 调用实例方法
+>>> s.age # 测试结果
+25
+```
+
+注意到这里**使用types模块的 `MethodType()` 函数来给实例绑定方法**，为什么要用 `MethodType()` 而不是直接用 `s.set_age = set_age` 直接绑定呢？这是因为我们采用后者绑定时，只是绑定了一个外部函数，它与实例本身没有任何关联，**没法使用self变量**，而使用 `MethodType()` 就会真正地为实例绑定一个方法，也因此绑定的函数的**第一个参数要设置为self变量**。做个对比：
+
+```python
+>>> s.set_age = set_age # 直接绑定
+>>> s.set_age(25)       # 无法调用self变量
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: set_age() missing 1 required positional argument: 'age'
+>>> s.set_age(s,25)     # 必须显式地传入实例s自身
+>>> s.age
+25
+>>> from types import MethodType
+>>> s.set_age = MethodType(set_age, s) # 使用MethodType绑定
+>>> s.set_age(30)                      # 可以调用self变量，只需传入一个参数
+>>> s.age
+30
+```
+
+但是，给一个实例绑定的方法，对另一个实例是不起作用的：
+
+```python
+>>> s2 = Student() # 创建新的实例
+>>> s2.set_age(25) # 尝试调用方法
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'Student' object has no attribute 'set_age'
+```
+
+为了给所有实例都绑定方法，可以直接给类绑定方法：
+
+```python
+>>> def set_score(self, score):
+...     self.score = score
+...
+>>> Student.set_score = set_score
+```
+
+**给类绑定方法不需要使用 `MethodType()` 函数**，并且所有实例均可调用绑定在类上的方法：
+
+```python
+>>> s.set_score(100)
+>>> s.score
+100
+>>> s2.set_score(99)
+>>> s2.score
+99
+```
+
+通常情况下，上面的 `set_score` 定义在类中，但**动态绑定允许我们在程序运行的过程中动态给类加上功能**，这在静态语言中很难实现。
+
+---
+
+
 
