MMy_Python_Notebook：使用@property-为何需要@property

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -145,3 +145,48 @@ AttributeError: 'GraduateStudent' object has no attribute 'sex'
 ---
 
 <br>
+
+## 使用@property
+
+### 为何需要@property
+
+在绑定属性时，如果我们直接把属性暴露出去供使用者修改，虽然写起来很简单，但是**没办法检查设置的属性值是否合理**，可以把成绩随便改：
+
+```python
+s = Student()
+s.score = 9999 # 直接通过属性修改
+```
+
+这显然不合逻辑。为了限制 `score` 的范围，可以通过一个 `set_score()` 方法来设置成绩，再通过一个 `get_score()` 来获取成绩，这样，在 `set_score()` 方法里，就可以检查参数：
+
+```python
+class Student(object):
+    def get_score(self):
+         return self._score
+    def set_score(self, value):
+        if not isinstance(value, int):
+            raise ValueError('score must be an integer!')
+        if value < 0 or value > 100:
+            raise ValueError('score must between 0 ~ 100!')
+        self._score = value
+```
+
+现在，对任意的Student实例进行操作，就不能随心所欲地设置score了：
+
+```python
+>>> s = Student()
+>>> s.set_score(60) # 通过类的方法修改
+>>> s.get_score()
+60
+>>> s.set_score(9999)
+Traceback (most recent call last):
+  ...
+ValueError: score must between 0 ~ 100!
+```
+
+但是，通过类的方法修改，调用者使用时比较麻烦，没有直接使用属性进行修改简单，而且对调用者是否自觉也有要求，如果调用者依然直接使用属性修改，就没法检查属性值了。
+
+有没有**既能检查属性值，又可以直接使用属性修改的办法呢**？答案是有的！
+
+---
+
