MMy_Python_Notebook：使用__slots__-限制可绑定的属性/方法

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -91,5 +91,57 @@ AttributeError: 'Student' object has no attribute 'set_age'
 
 ---
 
+### 限制可绑定的属性/方法
 
+上面两个小节介绍了怎样绑定属性和方法，但是如果我们想要**限制可以绑定到实例的属性/方法**怎么办呢？比方说，只允许对Student类的实例绑定 `name` 和 `age` 属性。
 
+为了达到限制的目的，Python允许在定义类的时候，定义一个特殊的 `__slots__` 变量，来限制该类实例能添加的属性：
+
+```python
+>>> class Student(object):
+...     `__slots__`  = ('name', 'age') # 用tuple定义允许绑定的属性名称
+```
+
+然后，我们试试：
+
+```python
+>>> s = Student()      # 创建新的实例
+>>> s.name = 'Michael' # 绑定属性'name'
+>>> s.age = 25         # 绑定属性'age'
+>>> s.score = 99       # 绑定属性'score'
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'Student' object has no attribute 'score'
+```
+
+由于属性 `score` 没有被放到 `__slots__` 变量中，所以实例不能绑定 `score` 属性，试图绑定 `score` 将得到 `AttributeError` 错误。
+
+使用 `__slots__` 要注意，**`__slots__` 变量的属性限制仅对当前类的实例起作用，对继承的子类是不起作用的**：
+
+```python
+>>> class GraduateStudent(Student):
+...     pass
+...
+>>> s1 = GraduateStudent()
+>>> s1.score = 9999 # 可以绑定任何属性
+```
+
+但是！**如果在子类中也定义 `__slots__` ，则子类实例允许定义的属性就既包括自身的 `__slots__` 也包括父类的 `__slots__` **：
+
+```python
+>>> class GraduateStudent(Student):
+...     __slots__ = ('score')
+...
+>>> s2 = GraduateStudent()
+>>> s2.name = 'Angela'
+>>> s2.age = 17
+>>> s2.score = 99
+>>> s2.sex = 'Female' # 无法绑定父类__slots__和当前类__slots__都没有的属性
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'GraduateStudent' object has no attribute 'sex'
+```
+
+---
+
+<br>
