MMy_Python_Notebook：使用@property-如何实现@property

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -190,3 +190,82 @@ ValueError: score must between 0 ~ 100!
 
 ---
 
+### 如何实现@property
+
+在[第四章-函数式编程](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/04%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B.md)中，我们学习到了**装饰器（decorator）**，它可以给函数动态添加功能。事实上，不仅是对函数，**装饰器对类的方法一样起作用**。Python内置的 `@property` 装饰器就可以帮助我们实现前面的需求，把一个方法变成属性调用：
+
+```python
+class Student(object):
+    @property
+    def score(self):        # 对应getter方法，也即前面例子的get_score(self)
+        return self._score
+    @score.setter
+    def score(self, value): # 对应setter方法，也即前面例子的set_score(self, value)
+        if not isinstance(value, int):
+            raise ValueError('score must be an integer!')
+        if value < 0 or value > 100:
+            raise ValueError('score must between 0 ~ 100!')
+        self._score = value
+```
+
+`@property` 的实现比较复杂。准确地说，把一个getter方法变成属性，只需要加上 `@property` 装饰器就可以了，而把一个setter方法变成属性赋值，这要加上一个 `@score.setter` 装饰器，也即 `@属性名.setter`。注意！**属性名和方法名一定要区分开**，否则会出错！这里我们把 `score` 属性改为 `_score` 属性，所以**对内部来说 `_score` 是属性，`score` 是方法**，**对外部来说 `score` 是属性，`_score` 被封装起来了**（因为我们使用了装饰器进行转换）。看看实际效果：
+
+```python
+>>> s = Student()
+>>> s.score = 60 # 实际转化为s.score(60)
+>>> s.score      # 实际转化为s.score()
+60
+>>> s.score = 9999 # 对外部来说可以直接使用属性赋值，同时也能检查属性值
+Traceback (most recent call last):
+  ...
+ValueError: score must between 0 ~ 100!
+```
+
+还可以定义只读属性，**只定义getter方法，不定义setter方法就是一个只读属性**，只读属性只能获取属性值，无法设置属性值：
+
+```python
+class Student(object):
+    @property
+    def birth(self):
+        return self._birth
+    @birth.setter
+    def birth(self, value):
+        self._birth = value
+    @property
+    def age(self): # 只读属性age，根据birth进行计算
+        return 2015 - self._birth
+```
+
+上面的birth是可读写属性，而age就是一个只读属性：。
+
+```python
+>>> s = Student()
+>>> s.birth = 2000 # 可读写属性birth可以进行赋值
+>>> s.birth
+2000
+>>> s.age
+16
+>>> s.age = 17     # 只读属性age无法进行赋值
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: can't set attribute
+```
+
+注意必须先对属性 `birth` 进行赋值，然后才可以访问 `birth` 和 `age`，否则就会出现：
+
+```python
+>>> s.birth
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "<stdin>", line 4, in birth
+AttributeError: 'Student' object has no attribute '_birth'
+>>> s.age
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "<stdin>", line 10, in age
+AttributeError: 'Student' object has no attribute '_birth'
+```
+
+---
+
+
