MMy_Python_Notebook：使用@property-小结

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -268,4 +268,10 @@ AttributeError: 'Student' object has no attribute '_birth'
 
 ---
 
+### 小结
 
+`@property` 广泛应用在类的定义中，可以让调用者写出简短的代码，同时又保证了对属性值进行必要的检查，这样，程序运行时就减少了出错的可能性。
+
+---
+
+<br>
