My_Python_Notebook：使用@property-练习

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -268,6 +268,42 @@ AttributeError: 'Student' object has no attribute '_birth'
 
 ---
 
+### 练习
+
+请利用 `@property` 给一个 `Screen` 对象加上 `width` 和 `height` 属性，以及一个只读属性 `resolution`：
+
+```python
+class Screen(object):
+    @property
+    def width(self):
+        return self._width
+    @width.setter
+    def width(self, value):
+        self._width = value
+    @property
+    def height(self):
+        return self._height
+    @height.setter
+    def height(self, value):
+        self._height = value
+    @property
+    def resolution(self):
+        return self._width * self._height
+```
+
+测试：
+
+```python
+>>> s = Screen()
+>>> s.width = 1024
+>>> s.height = 768
+>>> print(s.resolution)
+786432
+>>> assert s.resolution == 786432, '1024 * 768 = %d ?' % s.resolution
+```
+
+---
+
 ### 小结
 
 `@property` 广泛应用在类的定义中，可以让调用者写出简短的代码，同时又保证了对属性值进行必要的检查，这样，程序运行时就减少了出错的可能性。
@@ -275,3 +311,5 @@ AttributeError: 'Student' object has no attribute '_birth'
 ---
 
 <br>
+
+
