My_Python_Notebook：多重继承-为何需要多重继承

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -312,4 +312,33 @@ class Screen(object):
 
 <br>
 
+## 多重继承
+
+### 为何需要多重继承
+
+在[第六章-面向对象编程](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/06%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E7%BC%96%E7%A8%8B.md)中，我们学习了面向对象编程的一个重要性质——继承。**通过继承，子类可以获得父类的所有功能并进行进一步扩展**。
+
+假设我们设计了一个Animal类，并要为以下4种动物设计四个新的类：
+
+- Dog - 狗狗；
+- Bat - 蝙蝠；
+- Parrot - 鹦鹉；
+- Ostrich - 鸵鸟。
+
+如果把这些动物按照哺乳动物和鸟类分类，我们可以设计出这样的类的层次：
+
+![MixIn1](http://oe0e8k1nf.bkt.clouddn.com/My_Python_Notebook_MixIn1.png)
+
+但是如果按照能跑的和能飞的来分类，则设计出这样的类的层次就变为：
+
+![MixIn2](http://oe0e8k1nf.bkt.clouddn.com/My_Python_Notebook_MixIn2.png)
+
+但是，如果要把上面的两种分类方法都包含进来，我们就得**设计更多的层次**了。哺乳类要分为能跑的哺乳类和能飞的哺乳类，鸟类也要能跑的鸟类，能飞的鸟类。这么一来，类的层次变得很复杂了：
+
+![MixIn3](http://oe0e8k1nf.bkt.clouddn.com/My_Python_Notebook_MixIn3.png)
+
+如果**再增加更多的分类方式**（例如：宠物和非宠物），那么**类的数量会呈指数增长**，这样设计就显得很不实用了。
+
+---
+
 
