My_Python_Notebook：多重继承-使用多重继承

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -341,4 +341,51 @@ class Screen(object):
 
 ---
 
+### 使用多重继承
+
+分析一下前面的设计方法，其实之所以会造成类的数量呈指数增长，是因为**每个类只能继承一个类**，这就造成了很多不必要的重复实现。解决方法是采用**多重继承**。比方说设计为：
+
+![MixIn4](http://oe0e8k1nf.bkt.clouddn.com/My_Python_Notebook_MixIn4.png)
+
+因为能跑和能飞这两个类不受限于动物类，它们是独立的。我们单独实现这两个类，即使要再实现其他非动物的类，比如汽车和飞机，也能很轻松地继承它们的功能，而不需要再重复构造功能类似的新的类。而动物分类方面，假设我们加入宠物非宠物的分类，也不需再构造哺乳的能飞的宠物、鸟类的能飞的宠物等等类别，通过多重继承免去了很多麻烦。先进行动物分类的定义：
+
+```python
+class Animal(object):
+    pass
+
+# 大类:
+class Mammal(Animal):
+    pass
+
+class Bird(Animal):
+    pass
+```
+
+接下来定义好Runnable和Flyable的类：
+
+```python
+class Runnable(object):
+    def run(self):
+        print('Running...')
+
+class Flyable(object):
+    def fly(self):
+        print('Flying...')
+```
+
+对于需要Runnable功能的动物，只需要多继承一个Runnable，例如Dog：
+
+```python
+class Dog(Mammal, Runnable):
+    pass
+```
+
+对于需要Flyable功能的动物，只需要多继承一个Flyable，例如Bat：
+
+```python
+class Bat(Mammal, Flyable):
+    pass
+```
+
+**通过多重继承，一个子类可以同时获得多个父类的所有功能**。
 
