My_Python_Notebook：多重继承-MixIn

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -318,7 +318,7 @@ class Screen(object):
 
 在[第六章-面向对象编程](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/06%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E7%BC%96%E7%A8%8B.md)中，我们学习了面向对象编程的一个重要性质——继承。**通过继承，子类可以获得父类的所有功能并进行进一步扩展**。
 
-假设我们设计了一个Animal类，并要为以下4种动物设计四个新的类：
+假设我们设计了一个 `Animal` 类，并要为以下4种动物设计四个新的类：
 
 - Dog - 狗狗；
 - Bat - 蝙蝠；
@@ -361,7 +361,7 @@ class Bird(Animal):
     pass
 ```
 
-接下来定义好Runnable和Flyable的类：
+接下来定义好 `Runnable` 和 `Flyable` 的类：
 
 ```python
 class Runnable(object):
@@ -373,14 +373,14 @@ class Flyable(object):
         print('Flying...')
 ```
 
-对于需要Runnable功能的动物，只需要多继承一个Runnable，例如Dog：
+对于需要 `Runnable` 功能的动物，只需要多继承一个 `Runnable`，例如 `Dog`
 
 ```python
 class Dog(Mammal, Runnable):
     pass
 ```
 
-对于需要Flyable功能的动物，只需要多继承一个Flyable，例如Bat：
+对于需要 `Flyable` 功能的动物，只需要多继承一个 `Flyable`，例如 `Bat`：
 
 ```python
 class Bat(Mammal, Flyable):
@@ -388,4 +388,47 @@ class Bat(Mammal, Flyable):
 ```
 
 **通过多重继承，一个子类可以同时获得多个父类的所有功能**。
+
+### MixIn
+
+在设计类的继承关系时，**通常主线都是单一继承下来的**，例如，`Ostrich` 继承自 `Bird`。但是，如果需要**混入额外的功能**，通过多重继承就可以实现，比如，让 `Ostrich` 除了继承自 `Bird` 外，再同时继承 `Runnable`。种**（利用多重继承混入额外的功能）这种设计方式通常称之为MixIn**。
+
+为了更好地看出继承关系，我们**通常把用于添加额外功能的类命名带上一个后缀MixIn**，例如把 `Runnable` 和 `Flyable` 改为 `RunnableMixIn` 和 `FlyableMixIn`n 和 植食动物 `HerbivoresMixIn`，让某个动物同时拥有好几个MixIn：
+
+```python
+class Dog(Mammal, RunnableMixIn, CarnivorousMixIn):
+    pass
+```
+
+**MixIn的目的就是给一个类增加多个功能**，这样，在设计类的时候，我们可以**优先考虑通过多重继承来组合多个MixIn的功能，而不是设计多层次的复杂的继承关系**。
+
+Python自带的很多库也使用了MixIn。举个例子，Python自带了 `TCPServer` 和 `UDPServer` 这两类网络服务，而要同时服务多个用户就必须使用多进程或多线程模型，这两种模型由 `ForkingMixIn` 和 `ThreadingMixIn` 提供。通过组合，我们就可以创造出合适的服务来。
+
+比如，编写一个多进程模式的TCP服务，定义如下：
+
+```python
+class MyTCPServer(TCPServer, ForkingMixIn):
+    pass
+```
+
+编写一个多线程模式的UDP服务，定义如下：
+
+```python
+class MyUDPServer(UDPServer, ThreadingMixIn):
+    pass
+```
+
+如果你打算搞一个更先进的协程模型，可以编写一个 `CoroutineMixIn`：
+
+```python
+class MyTCPServer(TCPServer, CoroutineMixIn):
+    pass
+```
+
+这样一来，我们**不需要复杂而庞大的继承链，只要选择组合不同的类的功能，就可以快速构造出所需的子类**。
+
+---
+
+
+
 
