My_Python_Notebook：多重继承-小结

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -429,6 +429,15 @@ class MyTCPServer(TCPServer, CoroutineMixIn):
 
 ---
 
+### 小结
+
+- 由于**Python允许使用多重继承**，因此，MixIn就是一种常见的设计。
+
+- **只允许单一继承的语言**（如Java）不能使用MixIn的设计。
+
+---
+
+<br>
 
 
 
