My_Python_Notebook：定制类-__str__

--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -439,5 +439,60 @@ class MyTCPServer(TCPServer, CoroutineMixIn):
 
 <br>
 
+## 定制类
+
+在前面的章节中，我们知道了可以用 `__slots__` 变量限制可绑定的属性，我们也知道了在构造类的时候，只要定义了 `__len__()` 方法，用户就能使用Python内置的 `len()` 函数获取该类实例的长度。我们知道**形如 `__xxx__` 的变量/方法都是有特殊用途的**，那么**Python中还有哪些特殊的变量/方法可以帮助我们更好地定制类**呢？
+
+### \_\_str\_\_
+
+我们先定义一个 `Student` 类，然后打印一个实例：
+
+```python
+>>> class Student(object):
+...     def __init__(self, name):
+...         self.name = name
+...
+>>> print(Student('Michael'))
+<__main__.Student object at 0x109afb190>
+```
+
+但是这样打印实例，我们只能知道它属于什么类以及在内存的位置，它的其他信息全都无法了解，所以对使用者来说并不友好。怎么才能**定制打印的信息，使得打印实例时可以看到更多有用的信息**呢？只需要定义好 `__str__()` 方法就可以了：
+
+```python
+>>> class Student(object):
+...     def __init__(self, name):
+...         self.name = name
+...     def __str__(self):
+...         return 'Student object (name: %s)' % self.name
+...
+>>> print(Student('Michael'))
+Student object (name: Michael)
+```
+
+这样打印实例就不但能知道实例所属的类，也能获得这个实例的属性信息了。
+
+但是细心的朋友会发现**直接敲变量不用 `print` 函数**，打印出的实例依然是原来的样子：
+
+```python
+>>> s = Student('Michael')
+>>> s
+<__main__.Student object at 0x109afb310>
+```
+
+这是因为**直接显示变量调用的不是 `__str__()` 方法，而是 `__repr__()` 方法**，两者的区别是 `__str__()` 方法返回**用户看到的字符串**，而 `__repr__()` 返回**程序开发者看到的字符串**，也就是说，**`__repr__()` 是为调试服务的**。
+
+解决办法是再定义一个 `__repr__()` 方法。但是通常 `__str__()` 和 `__repr__()`代码都是一样的（当然，要写不同的也行），所以，有个偷懒的写法：
+
+```python
+class Student(object):
+    def __init__(self, name):
+        self.name = name
+    def __str__(self):
+        return 'Student object (name=%s)' % self.name
+    __repr__ = __str__ # 直接令__repr__等于__str__
+```
+
+---
+
 
 
