--- a/My_Python_Notebook/07面向对象高级编程.md
+++ b/My_Python_Notebook/07面向对象高级编程.md
@@ -494,5 +494,42 @@ class Student(object):
 
 ---
 
+### \_\_iter\_\_
 
+如果我们希望用 `for ... in` 循环来遍历一个类的实例，像遍历list或tuple那样，就必须实现一个 `__iter__()` 方法，该方法返回一个迭代对象，然后，Python的 `for` 循环就会不断调用该迭代对象的 `__next__()` 方法拿到循环的下一个值，直到遇到 `StopIteration` 错误时退出循环。
+
+我们以斐波那契数列为例，写一个 `Fib` 类，可以作用于 `for` 循环：
+
+```python
+class Fib(object):
+    def __init__(self):
+        self.a, self.b = 0, 1 # 初始化两个计数器a，b
+
+    def __iter__(self):
+        return self # 实例本身就是迭代对象，返回自己即可
+
+    def __next__(self):
+        self.a, self.b = self.b, self.a + self.b # 计算下一个值
+        if self.a > 100000: # 退出循环的条件
+            raise StopIteration();
+        return self.a # 返回下一个值
+```
+
+现在，试试把Fib类的实例作用于 `for` 循环，就能遍历斐波拉契数列了：
+
+```python
+>>> for n in Fib():
+...     print(n)
+...
+1
+1
+2
+3
+5
+...
+46368
+75025
+```
+
+---
 
